fabrik/internal/engine/testdata/migrations_collide.txt
Two declarations naming one stream is a positioned error: stream names
are bookkeeping identity and belong to exactly one tree.
-- go.mod --
module app

go 1.26

require github.com/gofabrik/fabrik/migrations v0.0.0

replace github.com/gofabrik/fabrik/migrations => MIGRATIONSDIR
-- main.go --
package main

func main() {
	if err := run(); err != nil {
		panic(err)
	}
}
-- auth/migrations.go --
package auth

import "embed"

//fabrik:migrations stream=accounts
//go:embed all:migrations
var Migrations embed.FS
-- auth/migrations/0001_users.sql --
CREATE TABLE users (id INTEGER PRIMARY KEY);
-- users/migrations.go --
package users

import "embed"

//fabrik:migrations stream=accounts
//go:embed all:migrations
var Migrations embed.FS
-- users/migrations/0001_profiles.sql --
CREATE TABLE profiles (id INTEGER PRIMARY KEY);
-- want/diags --
warning: auth/migrations.go:5:1: migrations Migrations can never run: nothing injects migrations.Sources
  help: call them from a start hook: //fabrik:hook start
func MigrateDB(ctx context.Context, db *sql.DB, d migrations.Dialect, src migrations.Sources) error { return src.Migrate(ctx, db, d) }
error: users/migrations.go:5:1: migration stream "accounts" is already declared at $WORK/auth/migrations.go:5:1
  help: streams are bookkeeping identity; name one of them differently with stream=
warning: users/migrations.go:5:1: migrations Migrations can never run: nothing injects migrations.Sources
  help: call them from a start hook: //fabrik:hook start
func MigrateDB(ctx context.Context, db *sql.DB, d migrations.Dialect, src migrations.Sources) error { return src.Migrate(ctx, db, d) }
